# server/doc/swagger.json
@@ -2,28 +2,131 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Events Manager",
-    "description": " API documetation for an event management system for bootcamp"
+    "title": "Jess Event Manager",
+    "description": "My event manager API for a Bootcamp project"
   },
   "host": "jess-event-system.herokuapp.com",
-  "basePath": "/",
+  "basePath": "/v1",
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "UserToken": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "x-access-token"
+    }
+  },
   "paths": {
     "/users/login": {
       "post": {
-        "tags": ["User"],
-        "summary": "Authenticates a user",
-        "description": "Authenticates a new user by cross checking the database",
+        "tags": [
+          "User"
+        ],
+        "summary": "Login a user",
+        "description": "Logs in a registered user.",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
         "parameters": [{
-          "name": "person",
-          "in": "body",
-          "description": "user to authenticate",
-          "schema": {
-            "$ref": "#/definitions/UserLogin"
+            "in": "formData",
+            "name": "email",
+            "type": "string",
+            "format": "email",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "password",
+            "type": "string",
+            "format": "password",
+            "required": true
           }
-        }],
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "User does not  Exists"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Register a user",
+        "description": "Registers a new user.",
+        "consumes": [
+          "application/x-www-form-urlencoded"
+        ],
+        "parameters": [{
+            "in": "formData",
+            "name": "surname",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "firstName",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "email",
+            "type": "string",
+            "format": "email",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "password",
+            "type": "string",
+            "format": "password",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "confirmPassword",
+            "type": "string",
+            "format": "password",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "isAdmin",
+            "type": "boolean",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "User exists"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      }
+    },
+    "/events": {
+      "get": {
+        "tags": ["Events"],
+        "summary": "Get all events event",
+        "description": "Get all events in the database.",
         "responses": {
           "200": {
             "description": "OK"
@@ -35,35 +138,7 @@
             "description": "Server Error"
           }
         }
-      }
-    },
-    "/users": {
-      "post": {
-        "tags": ["User"],
-        "summary": "Login a user",
-        "description": "Registers a user and stores it to the database.",
-        "parameters": [{
-          "name": "person",
-          "in": "body",
-          "description": "The user to Register.",
-          "schema": {
-            "$ref": "#/definitions/User"
-          }
-        }],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Server Error"
-          }
-        }
-      }
-    },
-    "/events": {
+      },
       "post": {
         "tags": ["Events"],
         "summary": "Creates a new event",
@@ -75,6 +150,9 @@
           "schema": {
             "$ref": "#/definitions/Event"
           }
+        }],
+        "security": [{
+          "UserToken": []
         }],
         "responses": {
           "200": {
@@ -90,6 +168,28 @@
       }
     },
     "/events/{id}": {
+      "get": {
+        "tags": ["Events"],
+        "summary": "Gets an event",
+        "description": "Get an event by in the database.",
+        "parameters": [{
+          "name": "id",
+          "in": "path",
+          "type": "integer",
+          "description": "The event to get."
+        }],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      },
       "put": {
         "tags": ["Events"],
         "summary": "Update an event",
@@ -98,10 +198,17 @@
           "name": "id",
           "in": "path",
           "type": "integer",
-          "description": "The event to update.",
+          "description": "The event id to update."
+        }, {
+          "name": "event",
+          "in": "body",
+          "description": "The changes to make.",
           "schema": {
             "$ref": "#/definitions/Event"
           }
+        }],
+        "security": [{
+          "UserToken": []
         }],
         "responses": {
           "200": {
@@ -125,27 +232,8 @@
           "type": "integer",
           "description": "The event to delete."
         }],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Server Error"
-          }
-        }
-      },
-      "get": {
-        "tags": ["Events"],
-        "summary": "Update an event",
-        "description": "Get an existing event in the database.",
-        "parameters": [{
-          "name": "id",
-          "in": "path",
-          "type": "integer",
-          "description": "The event to get."
+        "security": [{
+          "UserToken": []
         }],
         "responses": {
           "200": {
@@ -161,18 +249,10 @@
       }
     },
     "/centers": {
-      "post": {
+      "get": {
         "tags": ["Centers"],
-        "summary": "Creates a center",
-        "description": "Creates a new center and stores to the database.",
-        "parameters": [{
-          "name": "center",
-          "in": "body",
-          "description": "The center to create.",
-          "schema": {
-            "$ref": "#/definitions/Center"
-          }
-        }],
+        "summary": "Gets all center",
+        "description": "gets all center in the database.",
         "responses": {
           "200": {
             "description": "OK"
@@ -185,17 +265,20 @@
           }
         }
       },
-      "get": {
+      "post": {
         "tags": ["Centers"],
-        "summary": "Gets all center",
-        "description": "gets all center and adds to the database.",
+        "summary": "Creates a center",
+        "description": "Creates a new center and stores to the database.",
         "parameters": [{
-          "name": "centers",
+          "name": "center",
           "in": "body",
-          "description": "",
+          "description": "The center to create.",
           "schema": {
             "$ref": "#/definitions/Center"
           }
+        }],
+        "security": [{
+          "UserToken": []
         }],
         "responses": {
           "200": {
@@ -219,7 +302,7 @@
           "name": "id",
           "in": "path",
           "type": "integer",
-          "description": "The event to retrieve."
+          "description": "The center to retrieve by ID."
         }],
         "responses": {
           "200": {
@@ -241,10 +324,42 @@
           "name": "id",
           "in": "path",
           "type": "integer",
-          "description": "The center to update.",
+          "description": "The center to update."
+        }, {
+          "name": "center",
+          "in": "body",
+          "description": "The changes to make.",
           "schema": {
             "$ref": "#/definitions/Center"
           }
+        }],
+        "security": [{
+          "UserToken": []
+        }],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Centers"],
+        "summary": "Delete a center",
+        "description": "Delete an existing center from the database.",
+        "parameters": [{
+          "name": "id",
+          "in": "path",
+          "type": "integer",
+          "description": "The center to delete."
+        }],
+        "security": [{
+          "UserToken": []
         }],
         "responses": {
           "200": {
@@ -261,77 +376,26 @@
     }
   },
   "definitions": {
-    "User": {
-      "required": [
-        "email",
-        "username",
-        "password",
-        "confirmPassword"
-      ],
-      "properties": {
-        "email": {
-          "type": "string",
-          "uniqueItems": true
-        },
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "confirmPassword": {
-          "type": "string"
-        },
-        "isAdmin": {
-          "type": "boolean"
-        }
-      }
-    },
-    "UserLogin": {
-      "required": [
-        "email",
-        "password"
-      ],
-      "properties": {
-        "email": {
-          "type": "string",
-          "uniqueItems": true
-        },
-        "password": {
-          "type": "string"
-        }
-      }
-    },
     "Event": {
       "required": [
         "name",
         "location",
         "startDate",
-        "days",
-        "centerId"
+        "endDate"
       ],
       "properties": {
-        "eventName": {
+        "name": {
           "type": "string",
           "uniqueItems": true
         },
-        "centerId": {
+        "location": {
           "type": "integer"
         },
         "startDate": {
           "type": "string"
         },
-        "days": {
-          "type": "integer"
-        },
-        "status": {
+        "endDate": {
           "type": "string"
-        },
-        "createdBy": {
-          "type": "integer"
-        },
-        "updatedBy": {
-          "type": "integer"
         },
         "image": {
           "type": "string"
@@ -341,41 +405,24 @@
     "Center": {
       "required": [
         "name",
-        "stateId",
-        "address",
-        "facilities",
-        "hallCapacity",
-        "carParkCapacity",
-        "price"
+        "location"
       ],
       "properties": {
         "name": {
           "type": "string",
           "uniqueItems": true
         },
-        "stateId": {
-          "type": "integer"
-        },
-        "address": {
-          "type": "integer"
+        "location": {
+          "type": "string"
         },
         "facilities": {
           "type": "string"
         },
-        "hallCapacity": {
+        "state": {
           "type": "integer"
         },
-        "carParkCapacity": {
-          "type": "integer"
-        },
-        "createdBy": {
-          "type": "integer"
-        },
-        "updatedBy": {
-          "type": "integer"
-        },
-        "price": {
-          "type": "integer"
+        "image": {
+          "type": "string"
         }
       }
     }
